fix z-index for nominatim

--- a/frontend/app/components/layout/base/layout-map-search.component.scss
+++ b/frontend/app/components/layout/base/layout-map-search.component.scss
@@ -1,6 +1,6 @@
 .form-row {
     position: absolute;
     z-index: 100;
-    right: 50px;
+    right: 60px;
     top: 10px;
   }
