--- a/frontend/app/components/layout/base/layout-map.component.scss
+++ b/frontend/app/components/layout/base/layout-map.component.scss
@@ -10,7 +10,8 @@
 
 .map {
   height: 100%;
-  z-index: 1 important;
+  position: relative;
+  z-index: 1
 }
 
 .map > div {
